@@ -1,5 +1,15 @@
 2000-06-17  Per Bothner  <per@bothner.com>
 
+	* primitives.el:  New file.
+	* editfns.el:  New file.
+	* Makefile.am (ELISPSOURCES): Update for new files.
+
+	* subr.el (lambda, with-output-to-string, putf, check-argument-type):
+	Comment out not-yet-working macros.
+	* keydefs.el:  Comment out some things.
+	* keymap.el:  Likewise.
+	* simple.el:  Likewise.
+
 	* simple.el:  Imported from xemacs-21.2.32.
 	* keydefs.el:  Likewise.
 	* keymap.el:  Likewise.
